@@ -7,16 +7,14 @@ import edu.kit.tm.cm.smartcampus.buildingmanagement.logic.model.*;
 import edu.kit.tm.cm.smartcampus.buildingmanagement.logic.operations.filter.options.FilterOption;
 import edu.kit.tm.cm.smartcampus.buildingmanagement.logic.operations.filter.options.FilterOptions;
 import io.grpc.stub.StreamObserver;
-import org.springframework.stereotype.Controller;
 
 import java.util.Collection;
 import java.util.LinkedList;
+import java.util.stream.Collectors;
 
-@Controller
 public class BuildingManagementController
     extends BuildingManagementGrpc.BuildingManagementImplBase {
 
-  // retrieve building management manager via constructor injection
   private final BuildingManagementManager buildingManagementManager;
 
   public BuildingManagementController(BuildingManagementManager buildingManagementManager) {
@@ -27,40 +25,25 @@ public class BuildingManagementController
   public void getBuilding(
       GetBuildingRequest request, StreamObserver<GetBuildingResponse> responseObserver) {
 
-    // retrieve identification number from request
-    String identificationNumber = request.getIdentificationNumber();
-
-    // fetch building from manager with given identification number
-    Building building = this.buildingManagementManager.getBuilding(identificationNumber);
-
-    // write response building
-    GrpcBuilding grpcBuilding = this.writeBuilding(building);
-
-    // build response
     GetBuildingResponse response =
-        GetBuildingResponse.newBuilder().setBuilding(grpcBuilding).build();
-
-    // complete response call procedure
+        GetBuildingResponse.newBuilder()
+            .setBuilding(
+                writeBuilding(
+                    buildingManagementManager.getBuilding(request.getIdentificationNumber())))
+            .setResponseMessage(writeResponseMessage("hello", true))
+            .build();
     responseObserver.onNext(response);
     responseObserver.onCompleted();
   }
 
   @Override
   public void getRoom(GetRoomRequest request, StreamObserver<GetRoomResponse> responseObserver) {
-
-    // retrieve identification number from request
-    String identificationNumber = request.getIdentificationNumber();
-
-    // fetch room from manager with given identification number
-    Room room = this.buildingManagementManager.getRoom(identificationNumber);
-
-    // write response room
-    GrpcRoom grpcRoom = this.writeRoom(room);
-
-    // build response
-    GetRoomResponse response = GetRoomResponse.newBuilder().setRoom(grpcRoom).build();
-
-    // complete response call procedure
+    GetRoomResponse response =
+        GetRoomResponse.newBuilder()
+            .setRoom(
+                writeRoom(buildingManagementManager.getRoom(request.getIdentificationNumber())))
+            .setResponseMessage(writeResponseMessage("hello", true))
+            .build();
     responseObserver.onNext(response);
     responseObserver.onCompleted();
   }
@@ -69,20 +52,14 @@ public class BuildingManagementController
   public void getComponent(
       GetComponentRequest request, StreamObserver<GetComponentResponse> responseObserver) {
 
-    // retrieve identification number from request
-    String identificationNumber = request.getIdentificationNumber();
-
-    // fetch component from manager with given identification number
-    Component component = this.buildingManagementManager.getComponent(identificationNumber);
-
-    // write response component
-    GrpcComponent grpcComponent = this.writeComponent(component);
-
-    // build response
     GetComponentResponse response =
-        GetComponentResponse.newBuilder().setComponent(grpcComponent).build();
+        GetComponentResponse.newBuilder()
+            .setComponent(
+                writeComponent(
+                    buildingManagementManager.getComponent(request.getIdentificationNumber())))
+            .setResponseMessage(writeResponseMessage("hello", true))
+            .build();
 
-    // complete response call procedure
     responseObserver.onNext(response);
     responseObserver.onCompleted();
   }
@@ -90,10 +67,7 @@ public class BuildingManagementController
   @Override
   public void createBuilding(
       CreateBuildingRequest request, StreamObserver<CreateBuildingResponse> responseObserver) {
-
-    GrpcBuilding grpcRequestBuilding
-
-    Building building = this.readBuilding(request.getBuilding());
+    Building building = readBuilding(request.getBuilding());
 
     CreateBuildingResponse response =
         CreateBuildingResponse.newBuilder()
@@ -207,10 +181,10 @@ public class BuildingManagementController
     responseObserver.onCompleted();
   }
 
+
   @Override
   public void listBuildingFavorites(
-      ListBuildingFavoritesRequest request,
-      StreamObserver<ListBuildingFavoritesResponse> responseObserver) {
+      ListBuildingFavoritesRequest request, StreamObserver<ListBuildingFavoritesResponse> responseObserver) {
     ListBuildingFavoritesResponse response =
         ListBuildingFavoritesResponse.newBuilder()
             .setResponseMessage(writeResponseMessage("hello", true))
@@ -223,31 +197,30 @@ public class BuildingManagementController
 
   @Override
   public void listRoomFavorites(
-      ListRoomFavoritesRequest request,
-      StreamObserver<ListRoomFavoritesResponse> responseObserver) {
+    ListRoomFavoritesRequest request, StreamObserver<ListRoomFavoritesResponse> responseObserver) {
     ListRoomFavoritesResponse response =
-        ListRoomFavoritesResponse.newBuilder()
-            .setResponseMessage(writeResponseMessage("hello", true))
-            .setRooms(writeRooms(buildingManagementManager.listRoomFavorites(request.getOwner())))
-            .build();
+      ListRoomFavoritesResponse.newBuilder()
+        .setResponseMessage(writeResponseMessage("hello", true))
+        .setRooms(
+          writeRooms(buildingManagementManager.listRoomFavorites(request.getOwner())))
+        .build();
     responseObserver.onNext(response);
     responseObserver.onCompleted();
   }
 
   @Override
   public void listComponentFavorites(
-      ListComponentFavoritesRequest request,
-      StreamObserver<ListComponentFavoritesResponse> responseObserver) {
+    ListComponentFavoritesRequest request, StreamObserver<ListComponentFavoritesResponse> responseObserver) {
     ListComponentFavoritesResponse response =
-        ListComponentFavoritesResponse.newBuilder()
-            .setResponseMessage(writeResponseMessage("hello", true))
-            .setComponents(
-                writeComponents(
-                    buildingManagementManager.listComponentFavorites(request.getOwner())))
-            .build();
+      ListComponentFavoritesResponse.newBuilder()
+        .setResponseMessage(writeResponseMessage("hello", true))
+        .setComponents(
+          writeComponents(buildingManagementManager.listComponentFavorites(request.getOwner())))
+        .build();
     responseObserver.onNext(response);
     responseObserver.onCompleted();
   }
+
 
   @Override
   public void updateBuilding(
@@ -387,7 +360,7 @@ public class BuildingManagementController
         new LinkedList<>(
             componentTypeFilterMapping.getComponentTypesList().stream()
                 .map(this::readComponentType)
-                .toList()));
+                .collect(Collectors.toList())));
     return filterOption;
   }
 
@@ -399,7 +372,7 @@ public class BuildingManagementController
         new LinkedList<>(
             campusLocationFilterMapping.getCampusLocationsList().stream()
                 .map(this::readCampusLocation)
-                .toList()));
+                .collect(Collectors.toList())));
     return filterOption;
   }
 
@@ -409,7 +382,9 @@ public class BuildingManagementController
     filterOption.setSelected(roomTypeFilterMapping.getSelected());
     filterOption.setFilterValues(
         new LinkedList<>(
-            roomTypeFilterMapping.getRoomTypesList().stream().map(this::readRoomType).toList()));
+            roomTypeFilterMapping.getRoomTypesList().stream()
+                .map(this::readRoomType)
+                .collect(Collectors.toList())));
     return filterOption;
   }
 
